<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#C5AEED"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/register"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/re_id"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:hint="아이디를 입력하세요"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />

        <!--중복검사-->
    </LinearLayout>


    <!--비밀번호-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/re_password"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/registerpassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColorHint="@color/black" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/re_phone"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:hint="전화번호를 입력하세요(-포함)"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/re_name"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/registername"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/black" />
    </LinearLayout>

    <!--동의-->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/re_address"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:hint="@string/registeraddress"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColorHint="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp">

            <Button
                android:id="@+id/popup_btn"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/personal_agree"
                app:cornerRadius="13dp"/>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="96dp">

            <RadioButton
                android:id="@+id/yes_btn"
                android:layout_width="163dp"
                android:layout_height="48dp"
                android:text="@string/raido_yes_btn" />

            <RadioButton
                android:id="@+id/no_btn"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/radio_no_btn" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginLeft="150dp"
            android:layout_marginTop="15dp"
            android:text="@string/btn_reg"
            app:cornerRadius="13dp"/>
    </LinearLayout>

</LinearLayout>
